--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-mysql-session": "^2.1.8",
+    "express-promise-router": "^4.1.1",
     "express-session": "^1.18.0",
     "mysql2": "^3.10.0",
     "node": "^20.14.0"
